# test_dependency_overrides

./: README.md  pyproject.toml
app/: main.py
test_1/: client_query.txt  main_v1.py
test_2/: client_query.txt  main_v2.py
